add weather fields to user model entries object, add method on user to convert UNIX time to 24h for sunrise/set

--- a/frontend/todo.txt
+++ b/frontend/todo.txt
@@ -34,11 +34,20 @@ To Do:
   High Priority To Do:
   --------------------------------
 
+
+- remove username from SignUpForm, hide password on SignInForm
+
+- switch order of items in listview
+
+- add weather data fields to user model entries objects
+
 - in chartview request data based on chart datepicker inputs
 
 - re-fetch data when EntryDialog save button is clicked (chartview)
 
 - make demo version account system
+
+- create popup for setting default location on sign up ?
 
 - basic ui for account page
   - type of arthritis
